# pywebp

./: .clang-format  .gitignore  build.py  conanfile.txt  pyproject.toml  setup.py
tests/: test_webp.py
webp/: __init__.py  types.py
webp_build/: builder.py  cdef.h  source.c
