[tool.poetry]
name = "webp"
version = "0.1.7"
description = "Python bindings for WebP"
license = "MIT"
authors = ["Aiden Nibali <dismaldenizen@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/anibali/pywebp"
repository = "https://github.com/anibali/pywebp"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
    "License :: OSI Approved :: MIT License",
]
packages = [
    { include = "webp" },
    { include = "webp_build", format = "sdist" },
]
include = [
    { path = "build.py", format = "sdist" },
    { path = "conanfile.txt", format = "sdist" },
    { path = "webp_build/**/*.c", format = "sdist" },
    { path = "webp_build/**/*.h", format = "sdist" },
]

[tool.poetry.build]
script = "build.py"
generate-setup-file = true

[tool.poetry.dependencies]
Pillow = ">=9.5.0,<10.0.0"
cffi = ">=1.0.0"
numpy = ">=1.0.0"
python = ">=3.8,<3.12"

[tool.poetry.group.dev.dependencies]
conan = ">=1.8.0,<2.0"
conda-lock = "1.0.5"
twine = "^4.0.2"
black = ">=23.0.0"
pybind11 = "^2.11.1"
cmake = "^3.27.2"
ninja = "^1.11.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"

[build-system]
requires = [
    "cffi>=1.0.0",
    "conan>=1.8.0,<2.0",
    "poetry-core>=1.2.0",
    "setuptools>=40.8.0",
    "wheel",
]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 110
target-version = ['py38']

[tool.ruff]
# Never enforce `E501` (line length violations).
ignore = ["C901", "E501", "E741"]
select = ["C", "E", "F", "I", "W"]
line-length = 110

# Ignore import violations in all `__init__.py` files.
[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F811"]
"src/transformers/file_utils.py" = ["F401"]
"src/transformers/utils/dummy_*.py" = ["F401"]

[tool.ruff.isort]
known-first-party = ["webp", "_webp"]
